# kft

./: .clangd  .gitignore  .gitmodules  bootstrap.sh  configure.ac  internals.md
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml
src/: Makefile.am  kft.c  kft.h  kft_error.c  kft_error.h  kft_help.kft  kft_io.c  kft_io.h  kft_io_input.c  kft_io_input.h  kft_io_input_spec.c  kft_io_input_spec.h  kft_io_input_tags.c  kft_io_input_tags.h  kft_io_ispec.c  kft_io_ispec.h  kft_io_itags.c  kft_io_itags.h  kft_io_output.c  kft_io_output.h  kft_malloc.c  kft_malloc.h  kft_memstream.c  kft_memstream.h  kft_misc.c  kft_misc.h  kft_prog.c  kft_prog.h  kft_prog_parse.c  kft_prog_parse.h  kft_prog_parse_char.c  kft_prog_parse_char.h  kft_prog_parse_float.c  kft_prog_parse_float.h  kft_prog_parse_int.c  kft_prog_parse_int.h  kft_prog_parse_numeric.c  kft_prog_parse_numeric.h  kft_prog_parse_object.c  kft_prog_parse_object.h  (+6 more)
test/: input.kft  shebang.kft
tests/: Makefile.am  check_env.sh  check_opt_-e_complex.sh  check_opt_-e_simple.sh  check_run_in_shell.sh  check_tty_patterns.sh  helpers.sh  input.kft  shebang.kft
